[gd_scene load_steps=3 format=3 uid="uid://50k4im68v0hu"]

[ext_resource type="Script" path="res://menus/main/main_menu.gd" id="1_30vte"]
[ext_resource type="Theme" uid="uid://c0mo5w6awjj34" path="res://ui/themes/menu-button.theme" id="2_asf87"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_30vte")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.270588, 0.462745, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -93.0
offset_right = 104.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_asf87")

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../LoadGame")
text = "New Game"

[node name="LoadGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../NewGame")
focus_neighbor_bottom = NodePath("../Options")
text = "Load Game"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../LoadGame")
focus_neighbor_bottom = NodePath("../Quit")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../NewGame")
text = "Quit"

[connection signal="mouse_entered" from="VBoxContainer/NewGame" to="." method="_on_new_game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/LoadGame" to="." method="_on_load_game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
